--- a/index2.html
+++ b/index2.html
@@ -3,43 +3,144 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Álbum de Fotos</title>
-
-    <link rel="stylesheet" href="style.css">
-
+    <title>Álbum de Fotos VR</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f0f0f0; }
-        h1 { text-align: center; margin: 20px; }
-        .album { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; }
-        .photo { position: relative; overflow: hidden; border-radius: 8px; }
-        img { display: block; width: 300px; height: 200px; object-fit: cover; transition: transform 0.3s; }
-        img:hover { transform: scale(1.05); }
-        .overlay { position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.5); color: white; display: flex; align-items: center; justify-content: center; opacity: 0; transition: opacity 0.3s; }
-        .photo:hover .overlay { opacity: 1; }
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background: #000;
+            color: #fff;
+            font-family: Arial, sans-serif;
+            position: relative;
+        }
+        h1 {
+            text-align: center;
+            margin: 20px;
+            text-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
+            z-index: 5;
+        }
+        .album {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 15px;
+            position: relative;
+            z-index: 5;
+        }
+        .photo {
+            position: relative;
+            overflow: hidden;
+            border-radius: 12px;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+            animation: light-pulse 1.5s infinite alternate;
+            transition: transform 0.3s;
+        }
+        @keyframes light-pulse {
+            0% {
+                box-shadow: 0 0 15px rgba(255, 255, 255, 0.2), 0 0 30px rgba(255, 255, 255, 0.1);
+            }
+            100% {
+                box-shadow: 0 0 25px rgba(255, 255, 255, 0.5), 0 0 40px rgba(255, 255, 255, 0.3);
+            }
+        }
+        img {
+            width: 300px;
+            height: 200px;
+            object-fit: cover;
+            transition: transform 0.3s, filter 0.3s;
+        }
+        img:hover {
+            transform: scale(1.05);
+            filter: brightness(1.1);
+        }
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+        .photo:hover .overlay {
+            opacity: 1;
+        }
+        .moving-background {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(circle, rgba(255, 0, 255, 0.1), rgba(0, 255, 255, 0.1));
+            animation: move 20s linear infinite;
+            z-index: 0;
+        }
+        @keyframes move {
+            0% { background-position: 0% 0%; }
+            100% { background-position: 100% 100%; }
+        }
     </style>
 </head>
 <body>
+    <div class="moving-background"></div>
     <h1>𝒜𝐿𝐵𝒰𝑀 𝒟𝐸 𝐹𝒪𝒯𝒪𝒮</h1>
     
     <div class="album">
-
-        <div class="photo"><img src="foto1.jpg" alt="Foto 1"><div class="overlay">Foto 1</div></div>
-        <div class="photo"><img src="foto2.jpg" alt="Foto 2"><div class="overlay">Foto 2</div></div>
-        <div class="photo"><img src="foto3.jpg" alt="Foto 3"><div class="overlay">Foto 3</div></div>
-        <div class="photo"><img src="foto4.jpg" alt="Foto 4"><div class="overlay">Foto 4</div></div>
-        <div class="photo"><img src="foto5.jpg" alt="Foto 5"><div class="overlay">Foto 5</div></div>
-        <div class="photo"><img src="foto6.jpg" alt="Foto 6"><div class="overlay">Foto 6</div></div>
-        <div class="photo"><img src="foto7.jpg" alt="Foto 7"><div class="overlay">Foto 7</div></div>
-        <div class="photo"><img src="foto8.jpg" alt="Foto 8"><div class="overlay">Foto 8</div></div>
-        <div class="photo"><img src="foto9.jpg" alt="Foto 9"><div class="overlay">Foto 9</div></div>
-        <div class="photo"><img src="foto10.jpg" alt="Foto 10"><div class="overlay">Foto 10</div></div>
-        <div class="photo"><img src="foto11.jpg" alt="Foto 11"><div class="overlay">Foto 11</div></div>
-        <div class="photo"><img src="foto12.jpg" alt="Foto 12"><div class="overlay">Foto 12</div></div>
-        <div class="photo"><img src="foto13.jpg" alt="Foto 13"><div class="overlay">Foto 13</div></div>
-        <div class="photo"><img src="foto14.jpg" alt="Foto 14"><div class="overlay">Foto 14</div></div>
-        <div class="photo"><img src="foto15.jpg" alt="Foto 15"><div class="overlay">Foto 15</div></div>
-        <div class="photo"><img src="foto16.jpg" alt="Foto 16"><div class="overlay">Foto 16</div></div>
-    
+        <div class="photo">
+            <img src="foto1.jpg" alt="Descrição da Foto 1">
+            <div class="overlay">Foto 1</div>
+        </div>
+        <div class="photo">
+            <img src="foto2.jpg" alt="Descrição da Foto 2">
+            <div class="overlay">Foto 2</div>
+        </div>
+        <div class="photo">
+            <img src="foto3.jpg" alt="Descrição da Foto 3">
+            <div class="overlay">Foto 3</div>
+        </div>
+        <div class="photo">
+            <img src="foto4.jpg" alt="Descrição da Foto 4">
+            <div class="overlay">Foto 4</div>
+        </div>
+        <div class="photo">
+            <img src="foto5.jpg" alt="Descrição da Foto 5">
+            <div class="overlay">Foto 5</div>
+        </div>
+        <div class="photo">
+            <img src="foto6.jpg" alt="Descrição da Foto 6">
+            <div class="overlay">Foto 6</div>
+        </div>
+        <div class="photo">
+            <img src="foto7.jpg" alt="Descrição da Foto 7">
+            <div class="overlay">Foto 7</div>
+        </div>
+        <div class="photo">
+            <img src="foto8.jpg" alt="Descrição da Foto 8">
+            <div class="overlay">Foto 8</div>
+        </div>
+        <div class="photo">
+            <img src="foto9.jpg" alt="Descrição da Foto 9">
+            <div class="overlay">Foto 9</div>
+        </div>
+        <div class="photo">
+            <img src="foto10.jpg" alt="Descrição da Foto 10">
+            <div class="overlay">Foto 10</div>
+        </div>
+        <div class="photo">
+            <img src="foto11.jpg" alt="Descrição da Foto 11">
+            <div class="overlay">Foto 11</div>
+        </div>
+        <div class="photo">
+            <img src="foto12.jpg" alt="Descrição da Foto 12">
+            <div class="overlay">Foto 12</div>
+        </div>
     </div>
 </body>
 </html>
+
