--- a/index2.html
+++ b/index2.html
@@ -140,6 +140,21 @@
             <img src="foto12.jpg" alt="Descrição da Foto 12">
             <div class="overlay">Foto 12</div>
         </div>
+        <div class="photo">
+            <img src="foto13.jpg" alt="Descrição da Foto 13">
+            <div class="overlay">Foto 13</div>
+        </div>
+        <div class="photo">
+            <img src="foto14.jpg" alt="Descrição da Foto 14">
+            <div class="overlay">Foto 14</div>
+        </div>
+        <div class="photo">
+            <img src="foto15.jpg" alt="Descrição da Foto 15">
+            <div class="overlay">Foto 15</div>
+        </div>
+        <div class="photo">
+            <img src="foto16.jpg" alt="Descrição da Foto 16">
+            <div class="overlay">Foto 16</div>
     </div>
 </body>
 </html>
