--- a/index2.html
+++ b/index2.html
@@ -155,6 +155,7 @@
         <div class="photo">
             <img src="foto16.jpg" alt="Descrição da Foto 16">
             <div class="overlay">Foto 16</div>
+        </div>
     </div>
 </body>
 </html>
