--- a/index2.html
+++ b/index2.html
@@ -3,51 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Álbum de Fotos VR</title>
+    <title>Álbum de Fotos</title>
     <style>
         body {
             margin: 0;
             padding: 0;
-            overflow: hidden;
             background: #000;
             color: #fff;
             font-family: Arial, sans-serif;
-            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            overflow: hidden; /* Evita a barra de rolagem */
         }
         h1 {
             text-align: center;
             margin: 20px;
             text-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
-            z-index: 5;
         }
         .album {
             display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 15px;
-            position: relative;
-            z-index: 5;
+            flex-wrap: wrap; /* Permitir múltiplas linhas */
+            justify-content: center; /* Centralizar as fotos horizontalmente */
+            gap: 15px; /* Espaçamento entre as fotos */
+            padding: 20px;
+            position: relative; /* Para posicionar o fundo */
+            z-index: 1; /* Para que o álbum fique acima do fundo animado */
         }
         .photo {
             position: relative;
-            overflow: hidden;
+            width: 200px; /* Tamanho fixo para as fotos */
+            height: 150px; /* Tamanho fixo para as fotos */
             border-radius: 12px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
-            animation: light-pulse 1.5s infinite alternate;
+            overflow: hidden;
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
             transition: transform 0.3s;
         }
-        @keyframes light-pulse {
-            0% {
-                box-shadow: 0 0 15px rgba(255, 255, 255, 0.2), 0 0 30px rgba(255, 255, 255, 0.1);
-            }
-            100% {
-                box-shadow: 0 0 25px rgba(255, 255, 255, 0.5), 0 0 40px rgba(255, 255, 255, 0.3);
-            }
-        }
         img {
-            width: 300px;
-            height: 200px;
-            object-fit: cover;
+            width: 100%; /* Fazer a imagem ocupar toda a largura do container */
+            height: 100%; /* Fazer a imagem ocupar toda a altura do container */
+            object-fit: cover; /* Ajusta a imagem para cobrir o container */
             transition: transform 0.3s, filter 0.3s;
         }
         img:hover {
@@ -79,7 +76,7 @@
             height: 100%;
             background: radial-gradient(circle, rgba(255, 0, 255, 0.1), rgba(0, 255, 255, 0.1));
             animation: move 20s linear infinite;
-            z-index: 0;
+            z-index: 0; /* Para que o fundo fique atrás do álbum */
         }
         @keyframes move {
             0% { background-position: 0% 0%; }
@@ -159,4 +156,3 @@
     </div>
 </body>
 </html>
-
