--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
-            overflow: hidden; /* Evita a barra de rolagem */
+            overflow: hidden;
         }
         h1 {
             text-align: center;
@@ -25,31 +25,31 @@
         }
         .album {
             display: flex;
-            flex-wrap: wrap; /* Permitir múltiplas linhas */
-            justify-content: center; /* Centralizar as fotos horizontalmente */
-            gap: 15px; /* Espaçamento entre as fotos */
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 15px;
             padding: 20px;
-            position: relative; /* Para posicionar o fundo */
-            z-index: 1; /* Para que o álbum fique acima do fundo animado */
+            position: relative;
+            z-index: 1;
         }
         .photo {
             position: relative;
-            width: 200px; /* Tamanho fixo para as fotos */
-            height: 150px; /* Tamanho fixo para as fotos */
+            width: 200px;
+            height: 150px;
             border-radius: 12px;
             overflow: hidden;
             box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
             transition: transform 0.3s;
         }
         img {
-            width: 100%; /* Fazer a imagem ocupar toda a largura do container */
-            height: 100%; /* Fazer a imagem ocupar toda a altura do container */
-            object-fit: cover; /* Ajusta a imagem para cobrir o container */
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
             transition: transform 0.3s, filter 0.3s;
         }
         img:hover {
-            transform: scale(1.05);
-            filter: brightness(1.1);
+            transform: scale(1.1);
+            filter: brightness(1.3);
         }
         .overlay {
             position: absolute;
@@ -57,7 +57,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(0, 0, 0, 0.7);
             color: white;
             display: flex;
             align-items: center;
@@ -74,13 +74,21 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: radial-gradient(circle, rgba(255, 0, 255, 0.1), rgba(0, 255, 255, 0.1));
-            animation: move 20s linear infinite;
-            z-index: 0; /* Para que o fundo fique atrás do álbum */
+            background: linear-gradient(45deg, rgba(255, 0, 255, 0.2), rgba(0, 255, 255, 0.2));
+            background-size: 400% 400%;
+            animation: gradient-move 10s ease infinite;
+            z-index: 0;
         }
-        @keyframes move {
-            0% { background-position: 0% 0%; }
-            100% { background-position: 100% 100%; }
+        @keyframes gradient-move {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
         }
     </style>
 </head>
